커밋메시지

--- a/templates/index.html
+++ b/templates/index.html
@@ -1,10 +1,39 @@
-<!DOCTYPE html>
-<html lang="en">
+<!doctype html>
+<html lang="ko">
 <head>
-    <meta charset="UTF-8">
-    <title>Title</title>
-</head>
-<body>
+    <!-- Required meta tags -->
+    <meta charset="utf-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
+    <!-- OG 태그 -->
+    <meta property="og:title" content="선물별 성격유형 테스트"/>
+    <meta property="og:description" content="15일 메이킹챌린지 6기 - 1조 뿕은악마"/>
+    <meta property="og:image" content="{{ url_for('static', filename='images/gift-og.png') }}"/>
+    <!-- Bootstrap CSS -->
+    <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0/css/bootstrap.min.css"
+        integrity="sha384-Gn5384xqQ1aoWXA+058RXPxPg6fy4IWvTNh0E263XmFcJlSAwiGgFAW/dAiS6JXm" crossorigin="anonymous">
+    <!-- Optional JavaScript -->
+    <!-- jQuery first, then Popper.js, then Bootstrap JS -->
+    <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.5.1/jquery.min.js"></script>
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.12.9/umd/popper.min.js"
+        integrity="sha384-ApNbgh9B+Y1QKtv3Rn7W3mgPxhU9K/ScQsAP7hUibX39j7fakFPskvXusvfa0b4Q"
+        crossorigin="anonymous"></script>
+    <script src="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0/js/bootstrap.min.js"
+        integrity="sha384-JZR6Spejh4U02d8jOt6vLEHfe/JQGiRRSQQxSfFWpi1MquVdAyjUar5+76PVCmYl"
+        crossorigin="anonymous"></script>
+    <title>선물별 성격유형 테스트</title>
 
+    <!--CSS -->
+    <style>
+
+
+    </style>
+</head>
+
+<body>
+    <!-- 오디오 오르골 -->
+    <p>테스트 삼아 음원 넣었습니다.</p>
+    <audio controls autoplay>
+        <source src="../static/music/over-the-rainbow.mp4" type="audio/mp4">
+    </audio>
 </body>
 </html>
