메인페이지 레이아웃

--- a/templates/index.html
+++ b/templates/index.html
@@ -4,13 +4,24 @@
     <!-- Required meta tags -->
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
+
     <!-- OG 태그 -->
     <meta property="og:title" content="선물별 성격유형 테스트"/>
     <meta property="og:description" content="15일 메이킹챌린지 6기 - 1조 뿕은악마"/>
     <meta property="og:image" content="{{ url_for('static', filename='images/gift-og.png') }}"/>
+
+    <!--CSS -->
+    <link rel="stylesheet" href="styles.css">
+
     <!-- Bootstrap CSS -->
     <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0/css/bootstrap.min.css"
         integrity="sha384-Gn5384xqQ1aoWXA+058RXPxPg6fy4IWvTNh0E263XmFcJlSAwiGgFAW/dAiS6JXm" crossorigin="anonymous">
+
+    <!-- Google fonts -->
+    <link rel="preconnect" href="https://fonts.googleapis.com">
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+    <link href="https://fonts.googleapis.com/css2?family=Jua&display=swap" rel="stylesheet">
+
     <!-- Optional JavaScript -->
     <!-- jQuery first, then Popper.js, then Bootstrap JS -->
     <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.5.1/jquery.min.js"></script>
@@ -20,20 +31,80 @@
     <script src="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0/js/bootstrap.min.js"
         integrity="sha384-JZR6Spejh4U02d8jOt6vLEHfe/JQGiRRSQQxSfFWpi1MquVdAyjUar5+76PVCmYl"
         crossorigin="anonymous"></script>
+
+    <!-- include HTML 여러 개의 html을 병합해주는 스크립트-->
+    <script>
+        function includeHTML() {
+            var z, i, elmnt, file, xhttp;
+            /* Loop through a collection of all HTML elements: */
+            z = document.getElementsByTagName("*");
+            for (i = 0; i < z.length; i++) {
+                elmnt = z[i];
+                /*search for elements with a certain atrribute:*/
+                file = elmnt.getAttribute("include-html");
+                if (file) {
+                    /* Make an HTTP request using the attribute value as the file name: */
+                    xhttp = new XMLHttpRequest();
+                    xhttp.onreadystatechange = function () {
+                        if (this.readyState == 4) {
+                            if (this.status == 200) {
+                                elmnt.innerHTML = this.responseText;
+                            }
+                            if (this.status == 404) {
+                                elmnt.innerHTML = "Page not found.";
+                            }
+                            /* Remove the attribute, and call this function once more: */
+                            elmnt.removeAttribute("include-html");
+                            includeHTML();
+                        }
+                    }
+                    xhttp.open("GET", file, true);
+                    xhttp.send();
+                    /* Exit the function: */
+                    return;
+                }
+            }
+        }
+    </script>
+
     <title>선물별 성격유형 테스트</title>
 
-    <!--CSS -->
-    <style>
-
-
-    </style>
 </head>
-
 <body>
-    <!-- 오디오 오르골 -->
-    <p>테스트 삼아 음원 넣었습니다.</p>
-    <audio controls autoplay>
-        <source src="../static/music/over-the-rainbow.mp4" type="audio/mp4">
-    </audio>
+<!-- 오디오 오르골 -->
+<!--    <p>테스트 삼아 음원 넣었습니다.</p>-->
+<!--    <audio controls autoplay>-->
+<!--        <source src="../static/music/over-the-rainbow.mp4" type="audio/mp4">-->
+<!--    </audio>-->
+    <div class="container">
+      <div class="row">
+        <div class="col-sm-3">
+        </div>
+        <div class="col-sm-6">
+            <div class="wrap">
+                <h1 class="intro-title">
+                    선물별
+                    <br>
+                    성격유형 테스트
+                </h1>
+                <h5 class="main-text">
+                    며칠 뒤면 나의 생일이다.
+                    <br>
+                    생일파티는 어떻게 준비하면 좋을까?
+                </h5>
+                <div class="intro-img">
+                    <img src="../static/images/gift-main.png">
+                </div>
+                <button class="main-btn red-font">유형 테스트 시작하기</button>
+            </div>
+        </div>
+        <div class="col-sm-3">
+        </div>
+      </div>
+    </div>
+    <footer include-html="footer.html"></footer>
+    <script>
+        includeHTML();
+    </script>
 </body>
 </html>
