--- a/templates/index.html
+++ b/templates/index.html
@@ -11,7 +11,7 @@
     <meta property="og:image" content="{{ url_for('static', filename='images/gift-og.png') }}"/>
 
     <!--CSS -->
-    <link rel="stylesheet" href="styles.css">
+    <link rel="stylesheet" href="../static/style/styles.css">
 
     <!-- Bootstrap CSS -->
     <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0/css/bootstrap.min.css"
