--- a/templates/footer.html
+++ b/templates/footer.html
@@ -1,3 +1,26 @@
-<div>
-    this is footer
+<!--<script src="https://use.fontawesome.com/releases/v5.2.0/js/all.js"></script>-->
+<!-- <i class="fab fa-facebook-square"></i>-->
+<div class="container">
+    <div class="row">
+        <div class="col-sm-3" style="color:white; padding: 30px 15px 20px;">
+            Reddev
+        </div>
+        <div class="col-sm-6">
+        </div>
+        <div class="col-sm-3" style="color:#FFA3A3; padding: 30px 15px 20px;">
+            Follow us
+        </div>
+    </div>
+    <div>
+        <hr style="background-color:#FF7676; margin: 0px; height: 2px">
+    </div>
+    <div class="row">
+        <div class="col-sm-3" style="color:#FFA3A3; padding: 20px 15px 30px;">
+            ⓒ 2021, Reddev.
+        </div>
+        <div class="col-sm-6">
+        </div>
+        <div class="col-sm-3">
+        </div>
+    </div>
 </div>
