--- a/templates/fortun_result.html
+++ b/templates/fortun_result.html
@@ -70,41 +70,27 @@
     <title>선물별 성격유형 테스트</title>
 
 </head>
+
 <body>
-<!-- 오디오 오르골 -->
-<!--    <p>테스트 삼아 음원 넣었습니다.</p>-->
-<!--    <audio controls autoplay>-->
-<!--        <source src="../static/music/over-the-rainbow.mp4" type="audio/mp4">-->
-<!--    </audio>-->
-    <div class="container">
-      <div class="row">
-        <div class="col-sm-3">
-        </div>
+<div class="container">
+    <div class="row">
+        <div class="col-sm-3"></div>
         <div class="col-sm-6">
-            <div class="wrap">
-                <h1 class="intro-title">
-                    선물별
-                    <br>
-                    성격유형 테스트
-                </h1>
-                <h5 class="main-text">
-                    며칠 뒤면 나의 생일이다.
-                    <br>
-                    생일파티는 어떻게 준비하면 좋을까?
-                </h5>
-                <div class="intro-img">
-                    <img src="../static/images/gift-main.png">
-                </div>
-                <button class="main-btn red-font">유형 테스트 시작하기</button>
+            <div class="wrap" style="padding: 50px 20px;">
+            <div class="intro-img">
+                <img src="../static/images/fortune-conc.png">
             </div>
+            <br>
+            <div style="border:10px; border-radius: 10px; padding: 20px 20px; background-color:#D5B896">
+                코딩은 배워도 배워도 끝이 없는 것. 계속되는 오류 속에서 나에게 남는 것은 오기 뿐이다. 스파르타 코딩클럽 메이킹 챌린지 참여를 후회하고 싶어지는 지금. 나는 어떻게 이 위기를 극복할 것인가. 두둥둥</div>
+            <br>
+            <button class="main-btn red-font" style="background-color: white; display: inline-block;">다시하기</button>
+            <button class="main-btn red-font" style="background-color: white; display: inline-block;">저장하기</button>
         </div>
-        <div class="col-sm-3">
+
         </div>
-      </div>
+        <div class="col-sm-3"></div>
     </div>
-    <footer include-html="footer.html"></footer>
-    <script>
-        includeHTML();
-    </script>
+</div>
 </body>
 </html>
