--- a/templates/fortune.html
+++ b/templates/fortune.html
@@ -15,7 +15,7 @@
 
     <!-- Bootstrap CSS -->
     <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0/css/bootstrap.min.css"
-        integrity="sha384-Gn5384xqQ1aoWXA+058RXPxPg6fy4IWvTNh0E263XmFcJlSAwiGgFAW/dAiS6JXm" crossorigin="anonymous">
+          integrity="sha384-Gn5384xqQ1aoWXA+058RXPxPg6fy4IWvTNh0E263XmFcJlSAwiGgFAW/dAiS6JXm" crossorigin="anonymous">
 
     <!-- Google fonts -->
     <link rel="preconnect" href="https://fonts.googleapis.com">
@@ -26,11 +26,11 @@
     <!-- jQuery first, then Popper.js, then Bootstrap JS -->
     <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.5.1/jquery.min.js"></script>
     <script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.12.9/umd/popper.min.js"
-        integrity="sha384-ApNbgh9B+Y1QKtv3Rn7W3mgPxhU9K/ScQsAP7hUibX39j7fakFPskvXusvfa0b4Q"
-        crossorigin="anonymous"></script>
+            integrity="sha384-ApNbgh9B+Y1QKtv3Rn7W3mgPxhU9K/ScQsAP7hUibX39j7fakFPskvXusvfa0b4Q"
+            crossorigin="anonymous"></script>
     <script src="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0/js/bootstrap.min.js"
-        integrity="sha384-JZR6Spejh4U02d8jOt6vLEHfe/JQGiRRSQQxSfFWpi1MquVdAyjUar5+76PVCmYl"
-        crossorigin="anonymous"></script>
+            integrity="sha384-JZR6Spejh4U02d8jOt6vLEHfe/JQGiRRSQQxSfFWpi1MquVdAyjUar5+76PVCmYl"
+            crossorigin="anonymous"></script>
 
     <!-- include HTML 여러 개의 html을 병합해주는 스크립트-->
     <script>
@@ -70,41 +70,24 @@
     <title>선물별 성격유형 테스트</title>
 
 </head>
+
 <body>
-<!-- 오디오 오르골 -->
-<!--    <p>테스트 삼아 음원 넣었습니다.</p>-->
-<!--    <audio controls autoplay>-->
-<!--        <source src="../static/music/over-the-rainbow.mp4" type="audio/mp4">-->
-<!--    </audio>-->
-    <div class="container">
-      <div class="row">
-        <div class="col-sm-3">
-        </div>
+<div class="container">
+    <div class="row" >
+        <div class="col-sm-3"></div>
         <div class="col-sm-6">
             <div class="wrap">
-                <h1 class="intro-title">
-                    선물별
-                    <br>
-                    성격유형 테스트
-                </h1>
-                <h5 class="main-text">
-                    며칠 뒤면 나의 생일이다.
-                    <br>
-                    생일파티는 어떻게 준비하면 좋을까?
-                </h5>
                 <div class="intro-img">
-                    <img src="../static/images/gift-main.png">
+                    <img src="../static/images/fortune-main.png">
                 </div>
-                <button class="main-btn red-font">유형 테스트 시작하기</button>
+                <h5 class="main-text">
+                    <br>
+                    우리 포춘쿠키도 한 번 뽑아볼래요?
+                </h5>
+                <button class="main-btn red-font" style="background-color: white;">포춘쿠키 뽑아보기</button>
             </div>
         </div>
-        <div class="col-sm-3">
-        </div>
-      </div>
+        <div class="col-sm-3"></div>
     </div>
-    <footer include-html="footer.html"></footer>
-    <script>
-        includeHTML();
-    </script>
 </body>
 </html>
