--- a/templates/index.html
+++ b/templates/index.html
@@ -20,7 +20,10 @@
     <!-- Google fonts -->
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
-    <link href="https://fonts.googleapis.com/css2?family=Jua&display=swap" rel="stylesheet">
+    <link href="https://fonts.googleapis.com/css2?family=Noto+Sans+KR:wght@500&display=swap" rel="stylesheet">
+
+    <!-- Font awesome -->
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.15.4/css/all.min.css" integrity="sha512-1ycn6IcaQQ40/MKBW2W4Rhis/DbILU74C1vSrLJxCq57o941Ym01SwNsOMqvEBFlcgUa6xLiPY/NS5R+E6ztJQ==" crossorigin="anonymous" referrerpolicy="no-referrer" />
 
     <!-- Optional JavaScript -->
     <!-- jQuery first, then Popper.js, then Bootstrap JS -->
@@ -87,15 +90,15 @@
                     <br>
                     성격유형 테스트
                 </h1>
-                <h5 class="main-text">
+                <h2 class="main-text" style="margin-bottom: 40px;">
                     며칠 뒤면 나의 생일이다.
                     <br>
                     생일파티는 어떻게 준비하면 좋을까?
-                </h5>
+                </h2>
                 <div class="intro-img">
                     <img src="../static/images/gift-main.png">
                 </div>
-                <button class="main-btn red-font">유형 테스트 시작하기</button>
+                <button class="main-btn red-font"><h3>유형 테스트 시작하기</h3></button>
             </div>
         </div>
         <div class="col-sm-3">
