--- a/templates/footer.html
+++ b/templates/footer.html
@@ -1,7 +1,7 @@
 <div class="container">
     <div class="row">
-        <div class="col-sm-3" style="color:white;">
-            Reddev
+        <div class="col-sm-3">
+            <span style="color:white;">Reddev</span>
         </div>
         <div class="col-sm-6">
         </div>
@@ -9,22 +9,22 @@
             Follow us
             <div class="icons">
                 <a href="#">
-                    <i class="fab fa-facebook-f fa-lg fa-fw icon-facebook" aria-hidden="true">
+                    <i class="fab fa-facebook-f fa-lg fa-fwk" aria-hidden="true">
                     </i>
                 </a>
                 <a href="#">
-                    <i class="fab fa-instagram fa-lg fa-fw icon-instagram" aria-hidden="true">
+                    <i class="fab fa-instagram fa-lg fa-fw" aria-hidden="true">
                     </i>
                 </a>
                 <a href="#">
-                    <i class="fab fa-twitter fa-lg fa-fw icon-twitter" aria-hidden="true">
+                    <i class="fab fa-twitter fa-lg fa-fw" aria-hidden="true">
                     </i>
                 </a>
             </div>
         </div>
     </div>
     <div>
-        <hr style="background-color:#FF7676; margin: 0px; height: 2px">
+        <hr>
     </div>
     <div class="row">
         <div class="col-sm-3 footer-font">
