--- a/templates/index.html
+++ b/templates/index.html
@@ -23,9 +23,7 @@
     <link href="https://fonts.googleapis.com/css2?family=Noto+Sans+KR&display=swap" rel="stylesheet">
 
     <!-- Font awesome -->
-    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.15.4/css/all.min.css"
-          integrity="sha512-1ycn6IcaQQ40/MKBW2W4Rhis/DbILU74C1vSrLJxCq57o941Ym01SwNsOMqvEBFlcgUa6xLiPY/NS5R+E6ztJQ=="
-          crossorigin="anonymous" referrerpolicy="no-referrer"/>
+    <script src="https://kit.fontawesome.com/ac6bd223a2.js" crossorigin="anonymous"></script>
 
     <!-- Optional JavaScript -->
     <!-- jQuery first, then Popper.js, then Bootstrap JS -->
@@ -38,39 +36,7 @@
             crossorigin="anonymous"></script>
 
     <!-- include HTML 여러 개의 html을 병합해주는 스크립트-->
-    <script>
-        function includeHTML() {
-            var z, i, elmnt, file, xhttp;
-            /* Loop through a collection of all HTML elements: */
-            z = document.getElementsByTagName("*");
-            for (i = 0; i < z.length; i++) {
-                elmnt = z[i];
-                /*search for elements with a certain atrribute:*/
-                file = elmnt.getAttribute("include-html");
-                if (file) {
-                    /* Make an HTTP request using the attribute value as the file name: */
-                    xhttp = new XMLHttpRequest();
-                    xhttp.onreadystatechange = function () {
-                        if (this.readyState == 4) {
-                            if (this.status == 200) {
-                                elmnt.innerHTML = this.responseText;
-                            }
-                            if (this.status == 404) {
-                                elmnt.innerHTML = "Page not found.";
-                            }
-                            /* Remove the attribute, and call this function once more: */
-                            elmnt.removeAttribute("include-html");
-                            includeHTML();
-                        }
-                    }
-                    xhttp.open("GET", file, true);
-                    xhttp.send();
-                    /* Exit the function: */
-                    return;
-                }
-            }
-        }
-    </script>
+    <script src="../static/js/includeHTML.js"></script>
 
     <title>선물별 성격유형 테스트</title>
 
@@ -87,12 +53,12 @@
         </div>
         <div class="col-sm-6">
             <div class="wrap">
-                <h1 class="intro-title">
+                <h1 class="red-font">
                     선물별
                     <br>
                     성격유형 테스트
                 </h1>
-                <h2 class="main-text" style="margin-bottom: 40px;">
+                <h2 class="main-text">
                     며칠 뒤면 나의 생일이다.
                     <br>
                     생일파티는 어떻게 준비하면 좋을까?
@@ -100,7 +66,13 @@
                 <div class="intro-img">
                     <img src="../static/images/gift-main.png">
                 </div>
-                <button class="main-btn red-font"><h3>유형 테스트 시작하기</h3></button>
+                <a href="inspect.html">
+                    <button class="btn btn-outline-danger">
+                    <h3>
+                        유형 테스트 시작하기
+                    </h3>
+                    </button>
+                </a>
             </div>
         </div>
         <div class="col-sm-3">
@@ -108,8 +80,6 @@
       </div>
     </div>
     <footer include-html="footer.html"></footer>
-    <script>
-        includeHTML();
-    </script>
+    <script>includeHTML();</script>
 </body>
 </html>
