임시로 페이지 연결 | index.html에서 fortune.result까지 버튼 눌러 이동가능

--- a/templates/fortune.html
+++ b/templates/fortune.html
@@ -87,7 +87,9 @@
                     <br>
                     우리 포춘쿠키도 한 번 뽑아볼래요?
                 </h5>
-                <button class="main-btn red-font" style="background-color: white;">포춘쿠키 뽑아보기</button>
+                <a href="fortune_result.html">
+                    <button class="main-btn red-font" style="background-color: white;">포춘쿠키 뽑아보기</button>
+                </a>
             </div>
         </div>
         <div class="col-sm-3"></div>
