--- a/templates/fortune_result.html
+++ b/templates/fortune_result.html
@@ -85,11 +85,18 @@
             </div>
             <br>
             <div style="border:10px; border-radius: 10px; padding: 20px 20px; background-color:#D5B896">
-                코딩은 배워도 배워도 끝이 없는 것. 계속되는 오류 속에서 나에게 남는 것은 오기 뿐이다. 스파르타 코딩클럽 메이킹 챌린지 참여를 후회하고 싶어지는 지금. 나는 어떻게 이 위기를 극복할 것인가. 두둥둥</div>
-            <br>
-            <button class="main-btn red-font" style="background-color: white; display: inline-block;">다시하기</button>
-            <button class="main-btn red-font" style="background-color: white; display: inline-block;">저장하기</button>
-        </div>
+                코딩은 배워도 배워도 끝이 없는 것. 계속되는 오류 속에서 나에게 남는 것은 오기 뿐이다. 스파르타 코딩클럽 메이킹 챌린지 참여를 후회하고 싶어지는 지금. 나는 어떻게 이 위기를 극복할
+                것인가. 두둥둥
+            </div>
+                <br>
+                <a href="fortune.html">
+                    <button class="main-btn red-font" style="background-color: white; display: inline-block;">다시하기
+                    </button>
+                </a>
+                <a href="index.html">
+                <button class="main-btn red-font" style="background-color: white; display: inline-block;">저장하기</button>
+                </a>
+            </div>
 
         </div>
         <div class="col-sm-3"></div>
