--- a/templates/inspect.html
+++ b/templates/inspect.html
@@ -98,9 +98,11 @@
                       <button type="button" class="btn btn-outline-danger">
                           A. 다수의 친구들과 시끌벅적하게 보낸다.
                       </button>
-                      <button type="button" class="btn btn-outline-danger">
-                          B. 소수의 친구들과 오붓하게 보낸다.
-                      </button>
+                      <a href="result.html">
+                          <button type="button" class="btn btn-outline-danger" >
+                              B. 소수의 친구들과 오붓하게 보낸다.
+                          </button>
+                      </a>
                   </div>
 
                   <div class="progress">
