--- a/templates/result.html
+++ b/templates/result.html
@@ -119,7 +119,7 @@
                             </button>
                         </div>
                     </div>
-                <a href="#">
+                <a href="fortune.html">
                 <div style="text-align:center; height:140px; width:140px; border-radius:50%; background-color:#F5E9DA;">
                     <img src="../static/images/fortune-main.png" style="display:block; height:100px; margin:0 auto;">
                     <span class="main-text">포춘쿠키 뽑기</span></button>
