--- a/templates/result.html
+++ b/templates/result.html
@@ -1,81 +1,20 @@
 <!doctype html>
 <html lang="ko">
 <head>
-    <!-- Required meta tags -->
-    <meta charset="utf-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
+    <!--head.html에 공통 내용 삽입-->
+    {% include 'head.html' %}
 
     <!-- OG 태그 -->
     <meta property="og:title" content="선물별 성격유형 테스트"/>
     <meta property="og:description" content="15일 메이킹챌린지 6기 - 1조 뿕은악마"/>
     <meta property="og:image" content="{{ url_for('static', filename='images/gift-og.png') }}"/>
 
-    <!--CSS -->
-    <link rel="stylesheet" href="../static/style/styles.css">
-
-    <!-- Bootstrap CSS -->
-    <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0/css/bootstrap.min.css"
-          integrity="sha384-Gn5384xqQ1aoWXA+058RXPxPg6fy4IWvTNh0E263XmFcJlSAwiGgFAW/dAiS6JXm" crossorigin="anonymous">
-
-    <!-- Google fonts -->
-    <link rel="preconnect" href="https://fonts.googleapis.com">
-    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
-    <link href="https://fonts.googleapis.com/css2?family=Noto+Sans+KR&display=swap" rel="stylesheet">
-
-    <!-- Font awesome -->
-    <script src="https://kit.fontawesome.com/ac6bd223a2.js" crossorigin="anonymous"></script>
-
-    <!-- Optional JavaScript -->
-    <!-- jQuery first, then Popper.js, then Bootstrap JS -->
-    <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.5.1/jquery.min.js"></script>
-    <script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.12.9/umd/popper.min.js"
-            integrity="sha384-ApNbgh9B+Y1QKtv3Rn7W3mgPxhU9K/ScQsAP7hUibX39j7fakFPskvXusvfa0b4Q"
-            crossorigin="anonymous"></script>
-    <script src="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0/js/bootstrap.min.js"
-            integrity="sha384-JZR6Spejh4U02d8jOt6vLEHfe/JQGiRRSQQxSfFWpi1MquVdAyjUar5+76PVCmYl"
-            crossorigin="anonymous"></script>
-
-    <!-- include HTML 여러 개의 html을 병합해주는 스크립트-->
-    <script>
-        function includeHTML() {
-            var z, i, elmnt, file, xhttp;
-            /* Loop through a collection of all HTML elements: */
-            z = document.getElementsByTagName("*");
-            for (i = 0; i < z.length; i++) {
-                elmnt = z[i];
-                /*search for elements with a certain atrribute:*/
-                file = elmnt.getAttribute("include-html");
-                if (file) {
-                    /* Make an HTTP request using the attribute value as the file name: */
-                    xhttp = new XMLHttpRequest();
-                    xhttp.onreadystatechange = function () {
-                        if (this.readyState == 4) {
-                            if (this.status == 200) {
-                                elmnt.innerHTML = this.responseText;
-                            }
-                            if (this.status == 404) {
-                                elmnt.innerHTML = "Page not found.";
-                            }
-                            /* Remove the attribute, and call this function once more: */
-                            elmnt.removeAttribute("include-html");
-                            includeHTML();
-                        }
-                    }
-                    xhttp.open("GET", file, true);
-                    xhttp.send();
-                    /* Exit the function: */
-                    return;
-                }
-            }
-        }
-    </script>
-
     <title>선물별 성격유형 테스트</title>
 
 </head>
 <body>
-    <div class="container">
-      <div class="row">
+<div class="container">
+    <div class="row">
         <div class="col-sm-3">
         </div>
         <div class="col-sm-6">
@@ -107,33 +46,37 @@
                         간에 작고 불러 오직 이상이 붙잡아 현저하게 인간의 굳세게 아니다.
                     </p>
                 </div>
-                    <div class="row result-buttons">
-                        <div class="col-sm-6">
-                            <button class="red-font">
-                                다시 하기
-                            </button>
-                        </div>
-                        <div class="col-sm-6">
-                            <button class="red-font">
-                                공유하기
-                            </button>
-                        </div>
+                <div class="row result-buttons">
+                    <div class="col-sm-6">
+                        <button class="red-font">
+                            다시 하기
+                        </button>
                     </div>
-                <a href="fortune.html">
-                <div style="text-align:center; height:140px; width:140px; border-radius:50%; background-color:#F5E9DA;">
-                    <img src="../static/images/fortune-main.png" style="display:block; height:100px; margin:0 auto;">
-                    <span class="main-text">포춘쿠키 뽑기</span></button>
+                    <div class="col-sm-6">
+                        <button class="red-font">
+                            공유하기
+                        </button>
+                    </div>
                 </div>
+                <a href="fortune.html">
+                    <div style="text-align:center; height:140px; width:140px; border-radius:50%; background-color:#F5E9DA;">
+                        <img src="../static/images/fortune-main.png"
+                             style="display:block; height:100px; margin:0 auto;">
+                        <span class="main-text">포춘쿠키 뽑기</span></button>
+                    </div>
                 </a>
             </div>
         </div>
-          <div class="col-sm-3">
+        <div class="col-sm-3">
         </div>
-      </div>
     </div>
-    <footer include-html="footer.html"></footer>
-    <script>
-        includeHTML();
-    </script>
+</div>
+<footer>
+    <!--footer.html에 공통 내용 삽입-->
+    {% include 'footer.html' %}
+</footer>
+<script>
+    includeHTML();
+</script>
 </body>
 </html>
