--- a/templates/quiz.html
+++ b/templates/quiz.html
@@ -16,56 +16,80 @@
     <script type="text/javascript" src="../static/js/quiz.js"></script>
 </head>
 <body>
-<div class="container">
+<div class="wrap container">
     <div class="row">
-        <div class="col-sm-3">
+        <div class="col-lg-6 offset-md-3">
+            <section id="survey">
+                <div class="wrapper">
+                    <form id="form" action="">
+                        <div class="test">
+                            <div class="question_container clearfix">
+                                <h3 class="number">1/3</h3>
+                                <h3 class="question">질문예시</h3>
+                            </div>
+                            <div class="answer">
+                                <div>
+                                    <input type="radio" name="answer_1">
+                                    <label>A. 다수의 친구들과 시끌벅적하게 보낸다.</label>
+                                </div>
+                                <div>
+                                    <input type="radio" name="answer_1">
+                                    <label>B. 소수의 친구들과 오붓하게 보낸다.</label>
+                                </div>
+                            </div>
+                            <div class="btn_wrap">
+                                <button class="next_btn">next</button>
+                            </div>
+                        </div>
+                        <div class="test">
+                            <div class="question_container clearfix">
+                                <h3 class="number">2/3</h3>
+                                <h3 class="question">질문예시</h3>
+                            </div>
+                            <div class="answer">
+                                <div>
+                                    <input type="radio" name="answer_1">
+                                    <label>대답</label>
+                                </div>
+                                <div>
+                                    <input type="radio" name="answer_1">
+                                    <label>대답</label>
+                                </div>
+                            </div>
+                            <div class="btn_sort">
+                                <button class="prev_btn">prev</button>
+                                <button class="next_btn">next</button>
+                            </div>
+                        </div>
+                        <div class="test">
+                            <div class="question_container clearfix">
+                                <h3 class="number">3/3</h3>
+                                <h3 class="question">질문예시</h3>
+                            </div>
+                            <div class="answer">
+                                <div>
+                                    <input type="radio" name="answer_1">
+                                    <label>대답</label>
+                                </div>
+                                <div>
+                                    <input type="radio" name="answer_1">
+                                    <label>대답</label>
+                                </div>
+                            </div>
+                            <div class="btn_sort">
+                                <button class="prev_btn">prev</button>
+                                <input onclick="window.location.href='{{ url_for( 'result' ) }}';" type="submit" value="submit" class="submit_btn">
+                            </div>
+                        </div>
+                    </form>
+                </div>
+            </section>
         </div>
-        <div class="col-sm-6">
-            <div class="wrap">
-                <div class="question-title red-font">
-                    <div class="now-question-num">
-                        Q1
-                    </div>
-                    <div class="space">
-                    </div>
-                    <div class="question-num">
-                        1/20
-                    </div>
-                    <hr>
-                </div>
-                <div class="question-content">
-                    <h2 class="main-text">
-                        나는 누구와 보내는 게 좋을까?
-                    </h2>
-                    <button type="button" class="btn btn-outline-danger">
-                        A. 다수의 친구들과 시끌벅적하게 보낸다.
-                    </button>
-                    <a href="result.html">
-                        <button type="button" class="btn btn-outline-danger">
-                            B. 소수의 친구들과 오붓하게 보낸다.
-                        </button>
-                    </a>
-                </div>
-
-                <div class="progress">
-                    <div class="progress-bar bg-danger" role="progressbar">
-                    </div>
-                </div>
-            </div>
-
-        </div>
-
     </div>
-    <div class="col-sm-3">
-    </div>
-</div>
 </div>
 <footer>
     <!--footer.html에 공통 내용 삽입-->
     {% include 'footer.html' %}
 </footer>
-<script>
-    includeHTML();
-</script>
 </body>
 </html>
