--- a/templates/result.html
+++ b/templates/result.html
@@ -9,74 +9,84 @@
     <meta property="og:description" content="15일 메이킹챌린지 6기 - 1조 뿕은악마"/>
     <meta property="og:image" content="{{ url_for('static', filename='images/gift-og.png') }}"/>
 
-    <title>선물별 성격유형 테스트</title>
+    <!--CSS -->
+    <link rel="stylesheet" href="../static/style/result.css">
+
+    <!-- javascript -->
+    <script type="text/javascript" src="../static/js/result.js"></script>
+
 
 </head>
 <body>
-<div class="container">
+<div class="wrap container">
     <div class="row">
-        <div class="col-sm-3">
-        </div>
-        <div class="col-sm-6">
-            <div class="wrap">
-                <div class="intro-img">
-                    <img src="../static/images/gift-conc.png">
-                </div>
-                <h1 class="result-title">
-                    당신의 선물유형은
-                    <br>
-                    "이건 나만 갖고 싶어!"
-                </h1>
-                <div class="continue-arrow">
-                    <i class="fas fa-chevron-down"></i>
-                </div>
-
-                <div class="result-products">
-                    <div class="product">
-                    </div>
-                    <div class="product">
-                    </div>
-                    <div class="product">
-                    </div>
-                </div>
-                <div class="result-content">
-                    <p class="result-text">
-                        천하를 예가 남는 영락과 이상의 그들은 이상은 무엇이 가는 말이다. 든 심장은 열락의 무한한 노년에게서 이상은 무엇을 피가 주는 이것이다.
-                        고행을 거친 할지라도 트고, 무엇이 이것이다. 가진 얼마나 밥을 힘있다. 능히 이것을 용기가 굳세게 가치를 이상이 것이다.
-                        간에 작고 불러 오직 이상이 붙잡아 현저하게 인간의 굳세게 아니다.
-                    </p>
-                </div>
-                <div class="row result-buttons">
-                    <div class="col-sm-6">
-                        <button class="red-font">
-                            다시 하기
-                        </button>
-                    </div>
-                    <div class="col-sm-6">
-                        <button class="red-font">
-                            공유하기
-                        </button>
-                    </div>
-                </div>
-                <a href="fortune.html">
-                    <div style="text-align:center; height:140px; width:140px; border-radius:50%; background-color:#F5E9DA;">
-                        <img src="../static/images/fortune-main.png"
-                             style="display:block; height:100px; margin:0 auto;">
-                        <span class="main-text">포춘쿠키 뽑기</span></button>
-                    </div>
-                </a>
+        <div class="col-lg-6 offset-md-3">
+            <div class="intro-img">
+                <img src="../static/images/gift-conc.png">
             </div>
-        </div>
-        <div class="col-sm-3">
+            <h1 class="result-title">
+                당신의 선물유형은
+                <br>
+                "이건 나만 갖고 싶어!"
+            </h1>
+            <div class="continue-arrow">
+                <i class="fas fa-chevron-down"></i>
+            </div>
+            <ul class="giftimg clearfix">
+                <li>
+                    <div class="img_wrap"><img src="../static/images/gifts-types/01.png" alt=""></div>
+                </li>
+                <li>
+                    <div class="img_wrap"><img src="../static/images/gifts-types/01.png" alt=""></div>
+                </li>
+                <li>
+                    <div class="img_wrap"><img src="../static/images/gifts-types/01.png" alt=""></div>
+                </li>
+            </ul>
         </div>
     </div>
-</div>
-<footer>
-    <!--footer.html에 공통 내용 삽입-->
-    {% include 'footer.html' %}
-</footer>
-<script>
-    includeHTML();
-</script>
+    <div class="row">
+        <div class="col-lg-6 offset-md-3 txt-center">
+            <div class="main-text">
+                <h5>
+                    천하를 예가 남는 영락과 이상의 그들은 이상은 무엇이 가는 말이다. 든 심장은 열락의 무한한 노년에게서 이상은 무엇을 피가 주는 이것이다.
+                    고행을 거친 할지라도 트고, 무엇이 이것이다. 가진 얼마나 밥을 힘있다. 능히 이것을 용기가 굳세게 가치를 이상이 것이다.
+                    간에 작고 불러 오직 이상이 붙잡아 현저하게 인간의 굳세게 아니다.
+                </h5>
+            </div>
+            <div>
+                <div class="btn-wrapper">
+                    <a class="try-btn">다시 하기</a>
+                    <a id="popup-btn">공유하기</a>
+                </div>
+                <div id="popup01">
+                    <div class="header clearfix">
+                        <h3>공유하기</h3>
+                        <span class="close">&times;</span>
+                    </div>
+                    <!--공유 스크립트 미활성화-->
+                    <div class="share">
+                        <div class="url">
+                            <img src="../static/images/icons/copyLink.png">
+                            <button class="copy_btn" type="button">URL</button>
+                        </div>
+                        <div class="facebook">
+                            <img src="../static/images/icons/facebook.png">
+                            <button class="facebook_share" type="button">facebook</button>
+                        </div>
+                        <!--카카오 공유하기의 경우 kakao developers에 web 플랫폼 등록 후 스크립트 받아야 진행 가능-->
+                        <div class="kakao">
+                            <img src="../static/images/icons/kakao.png">
+                            <button class="kakao_share" type="button">kakaotalk</button>
+                        </div>
+                    </div>
+                </div>
+            </div>
+        </div>
+    </div>
+    <footer>
+        <!--footer.html에 공통 내용 삽입-->
+        {% include 'footer.html' %}
+    </footer>
 </body>
 </html>
