HTML | result.html 오타 수정

--- a/templates/result.html
+++ b/templates/result.html
@@ -82,9 +82,10 @@
             </div>
         </div>
     </div>
-    <footer>
-        <!--footer.html에 공통 내용 삽입-->
-        {% include 'footer.html' %}
-    </footer>
+</div>
+<footer>
+    <!--footer.html에 공통 내용 삽입-->
+    {% include 'footer.html' %}
+</footer>
 </body>
 </html>
