Static | images/gifts-typed, images/Icons 추가

--- a/templates/result.html
+++ b/templates/result.html
@@ -27,8 +27,8 @@
                 <br>
                 "이건 나만 갖고 싶어!"
             </h1>
-            <div class="continue-arrow">
-                <i class="fas fa-chevron-down"></i>
+            <div style="margin: 40px 0 60px">
+                <i class="bi bi-chevron-down" style="font-size:40px; color:#D5B896;"></i>
             </div>
             <ul class="giftimg clearfix">
                 <li>
