Style | styles.css 수정

--- a/templates/index.html
+++ b/templates/index.html
@@ -16,24 +16,14 @@
     <div class="row">
         <div class="col-lg-6 offset-md-3">
             <div class="wrap">
-                <h1 class="red-font">
-                    선물별
-                    <br>
-                    성격유형 테스트
-                </h1>
-                <h2 class="main-text">
-                    며칠 뒤면 나의 생일이다.
-                    <br>
-                    생일파티는 어떻게 준비하면 좋을까?
-                </h2>
+                <h1 class="red-font">선물별<br>성격유형 테스트</h1>
+                <h2 class="main-text">며칠 뒤면 나의 생일이다.<br>생일파티는 어떻게 준비하면 좋을까?</h2>
                 <div class="intro-img">
                     <img src="../static/images/gift-main.png">
                 </div>
-                <button class="btn btn-outline-danger" type="button"
+                <button class="main-btn red-font" type="button"
                         onclick="window.location.href='{{ url_for( 'quiz' ) }}';">
-                    <h3>
-                        유형 테스트 시작하기
-                    </h3>
+                    유형 테스트 시작하기
                 </button>
             </div>
         </div>
