--- a/static/style/styles.css
+++ b/static/style/styles.css
@@ -1,13 +1,10 @@
 * {word-break: keep-all !important;}
 
-body {
-    background-color: #E6D2BA !important;
-}
+body {background-color: #E6D2BA !important;}
 
 .wrap {
     text-align: center !important;
     padding: 100px 20px 200px; !important;
-
 }
 
 .txt-center{text-align: center;}
@@ -17,14 +14,10 @@ body {
 * {
     font-family: 'Noto Sans KR', sans-serif !important;
     letter-spacing: -0.05em !important;
-
 }
 
 
-p{
-    margin: 0 !important;
-
-}
+p{margin: 0 !important;}
 
 
 h1{
@@ -51,34 +44,18 @@ h3{
 .main-text {
     color: #2B0000;
     line-height:140%;
-
 }
 
-.result-text {
-    color: #2B0000;
-    font-size: 1.3rem;
-    letter-spacing: -0.05em;
-    line-height:140%;
-}
+.red-font {color: #E75453;}
 
-.red-font {
-    color: #E75453;
-}
-
-.footer-font{
-    color:#FFA3A3;
-}
+.footer-font{color:#FFA3A3;}
 
 
 /*컨테이너 스타일*/
 
-.intro-img {
-    margin: 0 auto 50px;
-}
+.intro-img {margin: 20px auto;}
 
-.result-products{
-    margin-bottom: 20px;
-}
+.result-products{margin-bottom: 20px;}
 
 .product{
     display:inline-block;
@@ -94,6 +71,25 @@ h3{
     margin-bottom: 40px;
 }
 
+/*이미지 스타일*/
+
+.intro-img img {
+    max-width: 100%;
+    height: auto;
+}
+
+
+/*버튼 스타일*/
+.main-btn {
+    width: 230px;
+    height: 60px;
+    margin: 30px auto;
+    padding: 10px;
+    display: block;
+    border-radius: 10px;
+    background-color: transparent;
+    border: 2px solid #E75453;
+}
 
 /* 푸터 스타일*/
 footer {
@@ -101,9 +97,7 @@ footer {
     flex: 0 0 auto;
 }
 
-footer .container .row .col-sm-3{
-    margin: 30px 0;
-}
+footer .container .row .col-sm-3{margin: 30px 0;}
 
 footer hr{
     background-color:#FF7676;
@@ -126,44 +120,4 @@ footer hr{
     padding: 8px 5px;
     border-radius: 5px;
     background-color: #FF7676;
-}
-
-
-/*이미지 스타일*/
-
-.intro-img img {
-    max-width: 100%;
-    height: auto;
-}
-
-
-/*버튼 스타일*/
-.main-btn {
-    margin: 0 auto;
-    display: block;
-    background-color: transparent;
-    border: 2px solid #E75453;
-}
-
-.btn-outline-danger{
-    padding: 20px 30px !important;
-    border-radius: 10px !important;
-}
-
-.result-buttons button{
-    margin: 0 auto;
-    padding: 20px 40px;
-    display: block;
-    border-radius: 10px;
-    background-color: transparent;
-    border: 2px solid #E75453;
-}
-
-.continue-arrow{
-    margin-bottom: 50px;
-}
-
-.fa-chevron-down{
-    color: #D5B896;
-    font-size: 2rem;
 }
