Style | footer 스타일 편집

--- a/static/style/styles.css
+++ b/static/style/styles.css
@@ -111,13 +111,15 @@ footer hr{
     margin-left: 15px;
 }
 
-.icons i{
-    color: white;
+.icons a{
+    text-decoration: none;
 }
 
-.icons a{
-    margin-right: 8px;
-    padding: 8px 5px;
-    border-radius: 5px;
+.icons i{
+    color: white;
     background-color: #FF7676;
+    padding: 5px 10px 10px;
+    margin-right: 5px;
+    border-radius: 5px;
 }
+
