--- a/templates/footer.html
+++ b/templates/footer.html
@@ -9,16 +9,13 @@
             Follow us
             <div class="icons">
                 <a href="#">
-                    <i class="fab fa-facebook-f fa-lg fa-fwk" aria-hidden="true">
-                    </i>
+                    <i class="bi bi-facebook"></i>
                 </a>
                 <a href="#">
-                    <i class="fab fa-instagram fa-lg fa-fw" aria-hidden="true">
-                    </i>
+                    <i class="bi bi-instagram"></i>
                 </a>
                 <a href="#">
-                    <i class="fab fa-twitter fa-lg fa-fw" aria-hidden="true">
-                    </i>
+                    <i class="bi bi-twitter"></i>
                 </a>
             </div>
         </div>
